# Changelog for Romanesco Backyard

## Backyard 0.3.3
Released on ...

- Move keys for top menu items to default lexicon file
- Add keys for buttons to clear individual custom cache partitions

## Backyard 0.3.2
Released on February 22, 2017

- Remove nonsensical test content from Backyard pages
- Corrections and additional content

## Backyard 0.3.1
Released on January 26, 2017

- Add Backyard resources
- Add Dashboard resource
- Add Universal styling under Electrons (showing the Semantic UI site.variables)
- Change alias 'pattern-library' to 'patterns'
- Corrections and additional content

## Backyard 0.3.0
Released on December 19, 2016

- Add Bosons category for ContentBlocks pages
- Fill Atoms pages
- Fill Molecules pages

## Backyard 0.2.1
Released on December 9, 2016

- Create script to migrate content changes back into Backyard package
- Change folder structure to match resource URIs
- Fill Electrons pages

## Backyard 0.2.0
Released on December 9, 2016

- Add resources for front-end pattern library (still empty)
- Small lexicon and namespace corrections

## Backyard 0.1.2

- Change lexicon prefixes from 'patternlab' to 'romanesco' [BC]

## Backyard 0.1.1

- Remove space / hyphen from package names
- Remove replace tasks from gruntfile

## Backyard 0.1.0

- Add PatternLab pages
- Add PatternLab lexicons