@@ -208,6 +208,52 @@
                         "value": "comments outline icon"
                     }
                 ]
+            },{
+                "pagetitle": "Adaptation",
+                "longtitle": "Define how patterns respond to varying environments",
+                "description": "Focus on: responsive behavior, performance across different devices and internet connections, etc.",
+                "introtext": "",
+                "alias": "adaptation",
+                "menutitle": "",
+                "parent": "Backyard",
+                "file": "05_pages/hub/backyard/adaptation.html",
+                "properties": "05_pages/hub/backyard/adaptation.json",
+                "context_key": "hub",
+                "template": "BasicOverview",
+                "menuindex": "10",
+                "published": "1",
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/adaptation.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "maximize icon"
+                    }
+                ]
+            },{
+                "pagetitle": "Monetization",
+                "longtitle": "Convert your efforts and assets into revenue",
+                "description": "Focus on: ecommerce, pricing tables, marketplace features, etc.",
+                "introtext": "",
+                "alias": "monetization",
+                "menutitle": "",
+                "parent": "Backyard",
+                "file": "05_pages/hub/backyard/monetization.html",
+                "properties": "05_pages/hub/backyard/monetization.json",
+                "context_key": "hub",
+                "template": "BasicOverview",
+                "menuindex": "11",
+                "published": "1",
+                "tvs": [
+                    {
+                        "name": "overview_icon_svg",
+                        "value": "romanesco/monetization.svg"
+                    },{
+                        "name": "overview_icon_font",
+                        "value": "shop icon"
+                    }
+                ]
             }
         ]
     }
