@@ -1,10 +1,11 @@
 # Changelog for Romanesco Backyard
 
 ## Backyard 0.3.3
-Released on ...
+Released on May 2, 2017
 
 - Move keys for top menu items to default lexicon file
 - Add keys for buttons to clear individual custom cache partitions
+- Add Adaptation and Monetization pages to Backyard
 
 ## Backyard 0.3.2
 Released on February 22, 2017
